src/test/ui/issues/issue-20616-3.stderr
error: expected one of `>`, const, lifetime, or type, found `,`
  --> $DIR/issue-20616-3.rs:13:24
   |
LL | type Type_3<T> = Box<T,,>;
   |                        ^ expected one of `>`, const, lifetime, or type

error: aborting due to previous error

